tests/rosetta/out/Fortran/9-billion-names-of-god-the-integer.error
gfortran: exit status 1
/tmp/9-billion-names-of-god-the-integer.f90:41:41:

   41 |       line = trim(trim(line // ' ') // r(((i)+1))) // ' '
      |                                         1
Error: Syntax error in argument list at (1)
/tmp/9-billion-names-of-god-the-integer.f90:53:46:

   53 |     print *, trim(s1 // ' ') // bigToString(r((((size(r) - 1))+1)))
      |                                              1
Error: Syntax error in argument list at (1)
/tmp/9-billion-names-of-god-the-integer.f90:60:8:

   60 |       a = a(1:(n - 1))
      |        1
Error: ‘a’ at (1) is not a variable
/tmp/9-billion-names-of-god-the-integer.f90:63:11:

   63 |     res = a
      |           1
Error: Function ‘a’ requires an argument list at (1)
/tmp/9-billion-names-of-god-the-integer.f90:88:13:

   88 |     allocate(res(0))
      |             1
Error: Allocate-object at (1) is neither a data pointer nor an allocatable variable
/tmp/9-billion-names-of-god-the-integer.f90:115:13:

  115 |     allocate(res(0))
      |             1
Error: Allocate-object at (1) is neither a data pointer nor an allocatable variable
/tmp/9-billion-names-of-god-the-integer.f90:190:33:

  190 |   recursive integer function row(n) result(res)
      |                                 1
Error: Procedure ‘row’ at (1) has an explicit interface from a previous declaration
/tmp/9-billion-names-of-god-the-integer.f90:191:28:

  191 |     integer, intent(in) :: n
      |                            1
Error: Unexpected data declaration statement in CONTAINS section at (1)
/tmp/9-billion-names-of-god-the-integer.f90:192:15:

  192 |     e = cumu(n)
      |               1
Error: Unexpected assignment statement in CONTAINS section at (1)
/tmp/9-billion-names-of-god-the-integer.f90:193:13:

  193 |     allocate(out(0))
      |             1
Error: Allocate-object at (1) is neither a data pointer nor an allocatable variable
/tmp/9-billion-names-of-god-the-integer.f90:194:9:

  194 |     i = 0
      |         1
Error: Unexpected assignment statement in CONTAINS section at (1)
/tmp/9-billion-names-of-god-the-integer.f90:195:22:

  195 |     do while ((i < n))
      |                      1
Error: Unexpected DO statement in CONTAINS section at (1)
/tmp/9-billion-names-of-god-the-integer.f90:196:48:

  196 |       diff = bigSub(e((((i + 1))+1)),e(((i)+1)))
      |                                                1
Error: Unexpected assignment statement in CONTAINS section at (1)
/tmp/9-billion-names-of-god-the-integer.f90:197:43:

  197 |       if (allocated(app8)) deallocate(app8)
      |                                           1
Error: Allocate-object at (1) is not a nonprocedure pointer nor an allocatable variable
/tmp/9-billion-names-of-god-the-integer.f90:198:15:

  198 |       allocate(app8(size(out)+1))
      |               1
Error: Allocate-object at (1) is neither a data pointer nor an allocatable variable
/tmp/9-billion-names-of-god-the-integer.f90:201:16:

  201 |       out = app8
      |                1
Error: Unexpected assignment statement in CONTAINS section at (1)
/tmp/9-billion-names-of-god-the-integer.f90:202:17:

  202 |       i = (i + 1)
      |                 1
Error: Unexpected assignment statement in CONTAINS section at (1)
/tmp/9-billion-names-of-god-the-integer.f90:203:7:

  203 |     end do
      |       1
Error: Expecting END PROGRAM statement at (1)
/tmp/9-billion-names-of-god-the-integer.f90:204:13:

  204 |     res = out
      |             1
Error: Unexpected assignment statement in CONTAINS section at (1)
/tmp/9-billion-names-of-god-the-integer.f90:205:10:

  205 |     return
      |          1
Error: Unexpected RETURN statement in CONTAINS section at (1)
/tmp/9-billion-names-of-god-the-integer.f90:206:5:

  206 |   end function row
      |     1
Error: Expecting END PROGRAM statement at (1)
/tmp/9-billion-names-of-god-the-integer.f90:141:53:

  141 |   recursive character(len=100) function bigToString(a) result(res)
      |                                                     1
Error: PROCEDURE attribute conflicts with INTENT attribute in ‘a’ at (1)
/tmp/9-billion-names-of-god-the-integer.f90:112:37:

  112 |   recursive integer function bigSub(a,b) result(res)
      |                                     1
Error: PROCEDURE attribute conflicts with INTENT attribute in ‘a’ at (1)
/tmp/9-billion-names-of-god-the-integer.f90:112:39:

  112 |   recursive integer function bigSub(a,b) result(res)
      |                                       1
Error: PROCEDURE attribute conflicts with INTENT attribute in ‘b’ at (1)
/tmp/9-billion-names-of-god-the-integer.f90:85:37:

   85 |   recursive integer function bigAdd(a,b) result(res)
      |                                     1
Error: PROCEDURE attribute conflicts with INTENT attribute in ‘a’ at (1)
/tmp/9-billion-names-of-god-the-integer.f90:85:39:

   85 |   recursive integer function bigAdd(a,b) result(res)
      |                                       1
Error: PROCEDURE attribute conflicts with INTENT attribute in ‘b’ at (1)
/tmp/9-billion-names-of-god-the-integer.f90:56:38:

   56 |   recursive integer function bigTrim(a) result(res)
      |                                      1
Error: PROCEDURE attribute conflicts with INTENT attribute in ‘a’ at (1)
/tmp/9-billion-names-of-god-the-integer.f90:69:6:

   69 |       res = (/0/)
      |      1
Error: Incompatible ranks 0 and 1 in assignment at (1)
/tmp/9-billion-names-of-god-the-integer.f90:82:4:

   82 |     res = digits
      |    1
Error: Incompatible ranks 0 and 1 in assignment at (1)
/tmp/9-billion-names-of-god-the-integer.f90:176:35:

  176 |         app6(size(row)+1) = bigAdd(row((((size(row) - 1))+1)),val)
      |                                   1
Error: Expected a procedure for argument ‘a’ at (1)
/tmp/9-billion-names-of-god-the-integer.f90:176:62:

  176 |         app6(size(row)+1) = bigAdd(row((((size(row) - 1))+1)),val)
      |                                                              1
Error: Expected a procedure for argument ‘b’ at (1)
/tmp/9-billion-names-of-god-the-integer.f90:93:20:

   93 |       if ((i < size(a))) then
      |                    1
Error: ‘array’ argument of ‘size’ intrinsic at (1) must be an array
/tmp/9-billion-names-of-god-the-integer.f90:97:20:

   97 |       if ((i < size(b))) then
      |                    1
Error: ‘array’ argument of ‘size’ intrinsic at (1) must be an array
/tmp/9-billion-names-of-god-the-integer.f90:102:25:

  102 |       allocate(app3(size(res)+1))
      |                         1
Error: ‘array’ argument of ‘size’ intrinsic at (1) must be an array
/tmp/9-billion-names-of-god-the-integer.f90:103:18:

  103 |       app3(1:size(res)) = res
      |                  1
Error: ‘array’ argument of ‘size’ intrinsic at (1) must be an array
/tmp/9-billion-names-of-god-the-integer.f90:104:16:

  104 |       app3(size(res)+1) = mod(s,10)
      |                1
Error: ‘array’ argument of ‘size’ intrinsic at (1) must be an array
/tmp/9-billion-names-of-god-the-integer.f90:105:6:

  105 |       res = app3
      |      1
Error: Incompatible ranks 0 and 1 in assignment at (1)
/tmp/9-billion-names-of-god-the-integer.f90:91:47:

   91 |     do while ((((((i < size(a)) .or. i) < size(b)) .or. carry) > 0))
      |                                               1
Error: ‘array’ argument of ‘size’ intrinsic at (1) must be an array
/tmp/9-billion-names-of-god-the-integer.f90:91:28:

   91 |     do while ((((((i < size(a)) .or. i) < size(b)) .or. carry) > 0))
      |                            1
Error: ‘array’ argument of ‘size’ intrinsic at (1) must be an array
/tmp/9-billion-names-of-god-the-integer.f90:109:18:

  109 |     res = bigTrim(res)
      |                  1
Error: Expected a procedure for argument ‘a’ at (1)
/tmp/9-billion-names-of-god-the-integer.f90:58:13:

   58 |     n = size(a)
      |             1
Error: ‘array’ argument of ‘size’ intrinsic at (1) must be an array
/tmp/9-billion-names-of-god-the-integer.f90:59:29:

   59 |     do while ((((n > 1) .and. a((((n - 1))+1))) == 0))
      |                             1
Error: Operands of logical operator ‘.and.’ at (1) are LOGICAL(4)/INTEGER(4)
/tmp/9-billion-names-of-god-the-integer.f90:182:6:

  182 |       app7(1:size(cache)) = cache
      |      1
Error: Incompatible ranks 1 and 2 in assignment at (1)
/tmp/9-billion-names-of-god-the-integer.f90:183:6:

  183 |       app7(size(cache)+1) = row
      |      1
Error: Incompatible ranks 0 and 1 in assignment at (1)
/tmp/9-billion-names-of-god-the-integer.f90:184:6:

  184 |       cache = app7
      |      1
Error: Incompatible ranks 2 and 1 in assignment at (1)
/tmp/9-billion-names-of-god-the-integer.f90:187:15:

  187 |     res = cache(((n)+1))
      |               1
Error: Rank mismatch in array reference at (1) (1/2)
/tmp/9-billion-names-of-god-the-integer.f90:143:8:

  143 |     s = ''
      |        1
Error: Cannot convert CHARACTER(0) to INTEGER(4) at (1)
/tmp/9-billion-names-of-god-the-integer.f90:144:14:

  144 |     i = (size(a) - 1)
      |              1
Error: ‘array’ argument of ‘size’ intrinsic at (1) must be an array
/tmp/9-billion-names-of-god-the-integer.f90:147:11:

  147 |       s = (s + s5)
      |           1
Error: Operands of binary numeric operator ‘+’ at (1) are INTEGER(4)/CHARACTER(100)
/tmp/9-billion-names-of-god-the-integer.f90:150:10:

  150 |     res = s
      |          1
Error: Cannot convert INTEGER(4) to CHARACTER(100) at (1)
/tmp/9-billion-names-of-god-the-integer.f90:121:20:

  121 |       if ((i < size(b))) then
      |                    1
Error: ‘array’ argument of ‘size’ intrinsic at (1) must be an array
/tmp/9-billion-names-of-god-the-integer.f90:132:25:

  132 |       allocate(app4(size(res)+1))
      |                         1
Error: ‘array’ argument of ‘size’ intrinsic at (1) must be an array
/tmp/9-billion-names-of-god-the-integer.f90:133:18:

  133 |       app4(1:size(res)) = res
      |                  1
Error: ‘array’ argument of ‘size’ intrinsic at (1) must be an array
/tmp/9-billion-names-of-god-the-integer.f90:134:16:

  134 |       app4(size(res)+1) = diff
      |                1
Error: ‘array’ argument of ‘size’ intrinsic at (1) must be an array
/tmp/9-billion-names-of-god-the-integer.f90:135:6:

  135 |       res = app4
      |      1
Error: Incompatible ranks 0 and 1 in assignment at (1)
/tmp/9-billion-names-of-god-the-integer.f90:118:24:

  118 |     do while ((i < size(a)))
      |                        1
Error: ‘array’ argument of ‘size’ intrinsic at (1) must be an array
/tmp/9-billion-names-of-god-the-integer.f90:138:18:

  138 |     res = bigTrim(res)
      |                  1
Error: Expected a procedure for argument ‘a’ at (1)
/tmp/9-billion-names-of-god-the-integer.f90:40:24:

   40 |     do while ((i < size(r)))
      |                        1
Error: ‘array’ argument of ‘size’ intrinsic at (1) must be an array
